--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
         "mongoose": "^6.2.5",
+        "ts-node": "^10.7.0",
         "typescript": "^4.6.2",
         "validator": "^13.7.0"
     },
