--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-input-mask": "^2.0.4"
+    "react-input-mask": "^2.0.4",
+    "react-notifications": "^1.7.3"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
